--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <tbody>
       <tr>
         <td>A website which is a consolidation of useful(verified) covid related websites links</td>
-        <td><a href="https://covid-resource-links.glideapp.io/" /> </td>
+        <td><a href="https://covid-resource-links.glideapp.io/" > </a></td>
       </tr>
       <tr>
         <td>A whatsApp based chatbot that provides the verified contact details of covid resources</td>
-        <td><a href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" /></td>
+        <td><a href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" ></a></td>
       </tr>
       
     </tbody>
