--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <td>A whatsApp based chatbot that provides the verified contact details of covid resources</td>
         <td><a href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" ></a></td>
       </tr>
+      <tr class="clickable text-center" 
+               onclick="window.location='https://ide.geeksforgeeks.org/Y4U8qx'">
+               <td>GeeksforGeeks</td>
+               <td>https://ide.geeksforgeeks.org/Y4U8qx</td>
+            </tr>
       
     </tbody>
   </table>
