--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <tbody>
       <tr>
         <td>A website which is a consolidation of useful(verified) covid related websites links</td>
-        <td><a href="https://covid-resource-links.glideapp.io/" > </a></td>
+        <a href="https://covid-resource-links.glideapp.io/" ><td> hello </td></a>
       </tr>
       <tr>
         <td>A whatsApp based chatbot that provides the verified contact details of covid resources</td>
