--- a/index.html
+++ b/index.html
@@ -22,19 +22,14 @@
     </thead>
     <tbody>
       <tr>
-        <td>A website which is a consolidation of useful(verified) covid related websites links</td>
-        <a href="https://covid-resource-links.glideapp.io/" ><td> hello </td></a>
+        <td>Consolidated covid related Resource & Fundraiser links</td>
+        <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td?
       </tr>
       <tr>
-        <td>A whatsApp based chatbot that provides the verified contact details of covid resources</td>
-        <td><a href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" ></a></td>
+        <td>WhatsApp based chatbot that provides verified contact details of covid resources</td>
+        <td><a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" > Open Link </a></td>
       </tr>
-      <tr class="clickable text-center" 
-               onclick="window.location='https://ide.geeksforgeeks.org/Y4U8qx'">
-               <td>GeeksforGeeks</td>
-               <td>https://ide.geeksforgeeks.org/Y4U8qx</td>
-            </tr>
-      
+     
     </tbody>
   </table>
 </div>
