--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
 
 <div class="container">
   <h2>Covid Resources</h2>
-  <p>Here is a compilation of covid resources which could be helpful to you</p>            
+  <p>Genuine. Most of these resources are being verified periodically.</p>            
   <table class="table table-striped">
     <thead>
       <tr>
         <th>Resouce Description</th>
         <th>link</th>
+        <th>Preview</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Consolidated covid related Resource & Fundraiser links</td>
-        <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td?
+        <td>Consolidated covid related Resources & Fundraisers</td>
+        <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td>
+         <td>
+          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/sheep-3.jpg" class="img-fluid img-thumbnail" alt="Sheep">
+        </td>
       </tr>
       <tr>
-        <td>WhatsApp based chatbot that provides verified contact details of covid resources</td>
+        <td>WhatsApp based chatbot that provides verified contact details of covid leads</td>
         <td><a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" > Open Link </a></td>
+        <td>
+          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/sheep-3.jpg" class="img-fluid img-thumbnail" alt="Sheep">
+        </td>
       </tr>
      
     </tbody>
