--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <td>Consolidated covid related Resources & Fundraisers</td>
         <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td>
          <td>
-          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/sheep-3.jpg" class="img-fluid img-thumbnail" alt="Sheep">
+          <img src="./Screenshot 2021-05-01 at 8.26.28 PM.png" class="img-fluid img-thumbnail" alt="Sheep">
         </td>
       </tr>
       <tr>
