--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <td>WhatsApp based chatbot that provides verified contact details of covid leads</td>
         <td><a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" > Open Link </a></td>
         <td>
-          <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/sheep-3.jpg" class="img-fluid img-thumbnail" alt="Sheep">
+          <img src="covid_resources/WhatsApp Image 2021-05-01 at 20.48.37.jpeg" class="img-fluid img-thumbnail" alt="Sheep">
         </td>
       </tr>
      
