--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <div class="container">
   <h2>Covid Resources</h2>
-  <p>Genuine. Most of these resources are being verified periodically.</p>            
+  <p>Most of these resources are being verified periodically.</p>            
   <table class="table table-striped">
-    <thead>
+    <thead class="p-3 mb-2 bg-info text-white">
       <tr>
         <th>Resouce Description</th>
-        <th>link</th>
+        <th>Link</th>
         <th>Preview</th>
       </tr>
     </thead>
@@ -33,7 +33,7 @@
         <td>WhatsApp based chatbot that provides verified contact details of covid leads</td>
         <td><a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" > Open Link </a></td>
         <td>
-          <img src="covid_resources/WhatsApp Image 2021-05-01 at 20.48.37.jpeg" class="img-fluid img-thumbnail" alt="Sheep">
+          <img src="./WhatsApp Image 2021-05-01 at 20.48.37.jpeg" class="img-fluid img-thumbnail" alt="Sheep">
         </td>
       </tr>
      
