--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="alert alert-success">
     <strong>Help!</strong> Please share your personally verified leads with others! 
     Share your verified resources & leads with me @ rvyshnavi212@gmail.com or 
-      <a href = "https://instagram.com/vyshnavi_rayabharapu?igshid=13ygx8m203rq"> @vyshnavi_rayabharapu (pvt acc, Insta) </a>
+      <a href = "https://instagram.com/vyshnavi_rayabharapu?igshid=13ygx8m203rq"> @vyshnavi_rayabharapu </a>  (Pvt Acc, Insta)
     </div>
 
 </div>
