--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
 <div class="container">
+  <img src="./mask.jpeg" class="img-thumbnail" alt="Mask up!">
   <h2>Covid Resources</h2>
-  <p>Most of these resources are being verified periodically.</p>            
+  <p class="text-success" >Most of these resources are being verified periodically.</p>            
   <table class="table table-striped">
     <thead class="p-3 mb-2 bg-info text-white">
       <tr>
@@ -26,14 +27,14 @@
         <td>Consolidated covid related Resources & Fundraisers</td>
         <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td>
          <td>
-          <img src="./Screenshot 2021-05-01 at 8.26.28 PM.png" class="img-fluid img-thumbnail" alt="Sheep">
+          <img src="./Screenshot 2021-05-01 at 8.26.28 PM.png" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
         </td>
       </tr>
       <tr>
         <td>WhatsApp based chatbot that provides verified contact details of covid leads</td>
         <td><a class="btn btn-primary" href="https://api.whatsapp.com/send/?phone=12345178991&text=COVID&app_absent=0" > Open Link </a></td>
         <td>
-          <img src="./WhatsApp Image 2021-05-01 at 20.48.37.jpeg" class="img-fluid img-thumbnail" alt="Sheep">
+          <img src="./WhatsApp Image 2021-05-01 at 20.48.37.jpeg" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
         </td>
       </tr>
      
