--- a/index.html
+++ b/index.html
@@ -37,14 +37,23 @@
           <img src="./WhatsApp Image 2021-05-01 at 20.48.37.jpeg" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
         </td>
       </tr>
+      <tr>
+        <td>Twitter Search for COVID</td>
+        <td><a class="btn btn-primary" href="https://covid19-twitter.in/" > Open Link </a></td>
+        <td>
+          <img src="" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
+        </td>
+      </tr>
      
     </tbody>
   </table>
 
     <div class="alert alert-success">
     <strong>Help!</strong> Please share your personally verified leads with others! 
-    Share your verified resources & leads with me @ rvyshnavi212@gmail.com or 
-      <a href = "https://instagram.com/vyshnavi_rayabharapu?igshid=13ygx8m203rq"> @vyshnavi_rayabharapu </a>  (Pvt Acc, Insta)
+      You can send your Verified leads/Requests to <a href = "https://instagram.com/_notyourgame_?igshid=16ravyzgbp1g0"> Rachana </a>,
+      <a href = "https://instagram.com/shloka_belde?igshid=hsct2so7uydy"> Shloka </a>,
+      <a href = "https://instagram.com/wattercomix?igshid=bb22vomirixw"> Vyshnavi </a>. 
+
     </div>
 
 </div>
