--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <td>Twitter Search for COVID</td>
         <td><a class="btn btn-primary" href="https://covid19-twitter.in/" > Open Link </a></td>
         <td>
-          <img src="" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
+          <img src="./covid_resources/Screenshot 2021-05-01 at 10.44.45 PM.png" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
         </td>
       </tr>
      
