--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>Consolidated covid related Resources & Fundraisers</td>
+        <td>Consolidated covid related Resources & Fundraisers <mark> <strong>Update : </strong> City wise links to telegram channels for leads and requests </mark></td>
         <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td>
          <td>
           <img src="./Screenshot 2021-05-01 at 8.26.28 PM.png" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
@@ -44,6 +44,15 @@
           <img src="./Screenshot 2021-05-01 at 10.44.45 PM.png" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
         </td>
       </tr>
+
+      <tr>
+        <td>Hyd Telegram channel for leads and requests</td>
+        <td><a class="btn btn-primary" href="https://t.me/CovidHyderabad" > Open Link </a></td>
+        <td>
+          <img src="./WhatsApp Image 2021-05-02 at 21.51.24.jpeg" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
+        </td>
+      </tr>
+
      
     </tbody>
   </table>
