--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </thead>
     <tbody>
       <tr>
-        <td>Help 60 underprivileged children with a month's grocery and medication <mark> Two children in the orphanage are infected by Covid-19 </mark></td>
-        <td><a class=".btn-success" href="https://www.ketto.org/fundraiser/absolute-need-for-groceries-and-medication" > Donate</a></td>
+        <td>Help 60 underprivileged children with a month's grocery and medication <br> <mark> Two children in the orphanage are infected by Covid-19 </mark></td>
+        <td><a class="btn btn-success" href="https://www.ketto.org/fundraiser/absolute-need-for-groceries-and-medication" > Donate</a></td>
       </tr>
     </tbody>
   </table>
