--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>Consolidated covid related Resources & Fundraisers <mark> <strong>Update : </strong> City wise links to telegram channels for leads and requests </mark></td>
+        <td>Consolidated covid related Resources & Fundraisers <mark> <strong>Update : </strong> Contacts for Free doctor consultation </mark></td>
         <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td>
          <td>
           <img src="./Screenshot 2021-05-01 at 8.26.28 PM.png" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
