--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
     </thead>
     <tbody>
       <tr>
+        <td>A group of volunteer posting verified leads on @yourcovidresources, Instagram</td>
+        <td><a class="btn btn-primary" href="https://instagram.com/yourcovidresources?igshid=1x0wgtx2ft3nr" > Open Link </a></td>
+        <td>
+          <img src="./WhatsApp Image 2021-05-05 at 21.03.48.jpeg" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
+        </td>
+      </tr>
+
+      <tr>
         <td>Consolidated covid related Resources & Fundraisers <mark> <strong>Update : </strong> Contacts for Free doctor consultation </mark></td>
         <td><a class="btn btn-primary" href="https://covid-resource-links.glideapp.io/" > Open Link</a></td>
          <td>
