--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </tr>
       
       <tr>
-        <td>A group of volunteer posting verified leads on <mark>@yourcovidresources</mark>,Instagram </td>
+        <td>A group of volunteer posting verified leads on Instagram </td>
         <td><a class="btn btn-primary" href="https://instagram.com/yourcovidresources?igshid=1x0wgtx2ft3nr" > Open Link</a></td>
          <td>
           <img src="./WhatsApp Image 2021-05-05 at 21.03.48.jpeg" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
