--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       
       
        <tr>
-        <td>A group of volunteer posting verified leads on @yourcovidresources, Instagram</td>
+        <td>A group of volunteers posting verified leads on @yourcovidresources, Instagram</td>
         <td><a class="btn btn-primary" href="https://instagram.com/yourcovidresources?igshid=1x0wgtx2ft3nr" > Open Link </a></td>
         <td>
           <img src="./WhatsApp Image 2021-05-05 at 21.03.48.jpeg" class="img-fluid img-thumbnail" alt="Preview couldn't be loaded">
@@ -95,7 +95,7 @@
     <strong>Help!</strong> Please share your personally verified leads with others! 
       You can send your Verified leads/Requests to <a href = "https://instagram.com/_notyourgame_?igshid=16ravyzgbp1g0"> Rachana</a>,
       <a href = "https://instagram.com/shloka_belde?igshid=hsct2so7uydy"> Shloka</a>,
-      <a href = "https://instagram.com/wattercomix?igshid=bb22vomirixw"> Vyshnavi </a>. 
+      <a href = "https://instagram.com/wattercomix?igshid=bb22vomirixw"> Vyshnavi</a>. 
 
     </div>
 
